--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,14 @@
         <activity
             android:name=".BmiKotlinactivity"
             android:label="BmiKotlinactivity" />
+        <activity
+            android:name=".VariableJavaActivity"
+            android:label="VariableJava"
+            />
+        <activity
+            android:name=".VariableKotlinActivity"
+            android:label="VariableKotlin"
+            />
     </application>
 
 </manifest>
